logstash-deployment-service.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: logstash-application
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: logstash-application
    spec:
      containers:
      - image: docker.elastic.co/logstash/logstash:6.4.0
        name: logstash-application
        ports:
        - name: logstash
          containerPort: 5044
          protocol: TCP
        resources:
          limits:
            memory: 4Gi
            cpu: "1000m"
          requests:
            memory: 2Gi
            cpu: "100m"
        volumeMounts:
        - name: pipeline
          mountPath: /usr/share/logstash/pipeline
          readOnly: true
        args:
        - -f
        - /usr/share/logstash/pipeline/logstash.conf
      volumes:
      - name: pipeline
        configMap:
          name: logstash-application
          items:
          - key: logstash.conf
            path: logstash.conf
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-application
  namespace: kube-system
  labels:
    app: logstash-application
spec:
  selector:
    app: logstash-application
  ports:
  - name: logstash
    port: 5044
    targetPort: 5044
    protocol: TCP
