ingress-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - monitoring"
spec:
  rules:
  - host: kibana-k8s.lamaqunyun.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: kibana-logging
          servicePort: 5601
